[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 576, 0 )
}

[node name="Level01" type="Node"]
script = ExtResource( 1 )
Obstacle = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 885.689 )
scale = Vector2( 0.3, 0.3 )

[node name="GeneratorPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="GeneratorPath"]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="GeneratorTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="hit" from="Player" to="." method="gameOver"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="GeneratorTimer" to="." method="_on_GeneratorTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
